# seneka_sensor_node

./: .cproject  CMakeLists.txt  Makefile  README.md  manifest.xml  seneka.rosinstall  seneka_sensor_node.rosinstall  stack.xml  startup.sh
SonyGigeCamera/: CMakeLists.txt  manifest.xml
imageCreater/: Makefile  cmake_install.cmake  imageCreator.launch  imageCreator.launch~  mainpage.dox
imageCreator/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  manifest.xml  manifest.xml~
image_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
image_publisher/src/: image_publisher.cpp
seneka/: package.xml
seneka_bringup/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
seneka_bringup/components/: sensor_placement.xml  sony_camera.xml
seneka_bringup/launch/: rviz.launch  sensor_placement.launch  sony_camera.launch  termoVideoManager.launch
seneka_can/: CMakeLists.txt  package.xml
seneka_can/common/include/pcanbasic/: PCANBasic.h
seneka_can/common/src/: libpcanbasic.cpp
seneka_can/ros/include/seneka_can/: SenekaCan.h
seneka_can/ros/src/: seneka_can.cpp  seneka_can_tester.cpp
seneka_config/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
seneka_config/config/: rviz.vcg  seneka_rviz_groovy_config.rviz  sensor_placement.yaml
seneka_control_interface/: CMakeLists.txt  package.xml
seneka_control_interface/action/: JointTrajectory.action
seneka_control_interface/mc/: main.c
seneka_control_interface/ros/scripts/: leg_kinematics.py
seneka_control_interface/ros/src/: seneka_control_interface.cpp
seneka_dgps/: CMakeLists.txt  CMakeLists.txt~  hello  manifest.xml  package.xml
seneka_dgps/Debug/: makefile  sources.mk
seneka_dgps/Debug/common/src/: subdir.mk
seneka_dgps/Debug/ros/src/: subdir.mk
seneka_dgps/common/include/seneka_dgps/: Dgps.h  DgpsNode.h  SerialIO.h
seneka_dgps/common/src/: Dgps.cpp  Dgps.cpp~  Dgps_original.cpp  SerialIO.cpp
seneka_dgps/ros/include/seneka_dgps/: SenekaDgps.h  seneka_dgps.h
seneka_dgps/ros/src/: SenekaDgps.cpp  seneka_dgps.cpp  seneka_dgps.cpp~  seneka_dgps_node.cpp
seneka_environments/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
seneka_hd_video_manager/: CMakeLists.txt  README.md  package.xml
seneka_hd_video_manager/ffmpeg_example_without_ros/: Makefile  tags  video_decoding.c
seneka_hd_video_manager/src/: boost_serialization_avpacket.h  frameManager.cpp  frameManager.h  hdVideoManager.cpp  videoRecorder.h
seneka_hokuyo_laserscanner/: CMakeLists.txt  package.xml
seneka_hokuyo_laserscanner/src/: seneka_hokuyo_laserscanner.cpp
seneka_laser_scan/: CMakeLists.txt  package.xml
seneka_laser_scan/ros/include/seneka_laser_scan/: SenekaLaserScan.h
seneka_laser_scan/src/: seneka_laser_scan.cpp
seneka_leg/: CMakeLists.txt  package.xml
seneka_leg/common/include/seneka_leg/: SenekaLeg.h
seneka_leg_control/: CMakeLists.txt  package.xml
seneka_motor_control/: CMakeLists.txt  package.xml
seneka_motor_control/common/include/: SocketCAN.h  SocketCan.h
seneka_motor_control/ros/include/: SocketCan.h
seneka_motor_control/ros/src/: seneka_motor_control.cpp
seneka_msg/: CMakeLists.txt  package.xml
seneka_msg/msg/: dgpsPosition.msg
seneka_node_bringup/: CMakeLists.txt  package.xml
seneka_node_bringup/components/: imu.xml  sony_camera.xml
seneka_node_bringup/launch/: control_interface.launch  dgps.launch  hokuyo_laserscanner.launch  laser_scan.launch  sensor_node.launch  sony_camera.launch  termo_video_manager.launch  video_manager.launch  windsensor.launch
seneka_node_config/: CMakeLists.txt  package.xml
seneka_node_config/config/: control_interface.yaml  control_interface_kinematics.yaml  laser_assembler.yaml  sony_camera.yaml  urg_node.yaml
seneka_node_config/config/sn1/: control_interface.yaml  control_interface_kinematics.yaml  sony_camera.yaml
seneka_node_config/config/sn2/: .control_interface.yaml.swp  .control_interface_kinematics.yaml.swp  control_interface.yaml  control_interface_kinematics.yaml
seneka_node_config/config/sn3/: control_interface.yaml.orig  control_interface_kinematics.yaml.orig
seneka_node_config/system/: 40-permissions.rules  70-persistent-net.rules  install.sh
seneka_remote_control/: CMakeLists.txt  package.xml
seneka_remote_control/include/: Tower.h
seneka_remote_control/src/: Tower.cpp  seneka_remote_control.cpp
seneka_scenarios/: CMakeLists.txt  call_service.txt  package.xml  thin_client.py
seneka_scenarios/video_capture/: capture.sh
seneka_sensor_node/: CMakeLists.txt  package.xml  package.xml.orig
seneka_sensor_node_description/: CMakeLists.txt  package.xml
seneka_sensor_node_description/config/: urdf.rviz
seneka_sensor_node_description/launch/: seneka_sensor_node_description.launch
seneka_sensor_node_description/urdf/: experimental.urdf  seneka_sensor_node_description.urdf  seneka_sensor_node_description.urdf.xacro  seneka_sensor_node_description_visual.urdf.xacro
seneka_socketcan/: CMakeLists.txt  package.xml
seneka_socketcan/common/include/: SocketCAN.h
seneka_socketcan/common/include/seneka_socketcan/: SocketCAN.h  general_device.h
seneka_socketcan/ros/src/: socketCAN.cpp
seneka_sony_camera/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
seneka_sony_camera/include/: sony_camera_node.h
seneka_sony_camera/launch/: sony_camera.launch  sony_camera.xml
seneka_sony_camera/src/: sony_camera_node.cpp
seneka_srv/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
seneka_srv/srv/: JointTrajectory.srv  backLightCompensation.srv  canReadMsg.srv  canSendMsg.srv  debugScreen.srv  focus.srv  focusAuto.srv  focusNearLimit.srv  infraredCutFilter.srv  infraredCutFilterAuto.srv  noiseReduction.srv  pictureEffect.srv  statusDisplay.srv  streaming.srv  titleDisplay.srv  titleText.srv  videoMode.srv  zoom.srv
seneka_termo_video_manager/: CMakeLists.txt  README.md  package.xml
seneka_tilt/: CMakeLists.txt  package.xml
seneka_tilt_control/: CMakeLists.txt  package.xml
seneka_trunk_control/: CMakeLists.txt  (+1 more)
(+204 files in other folders)
