<?xml version="1.0"?>
<package>
  <name>seneka_bringup</name>
  <version>0.0.0</version>
  <description>The seneka_bringup package holds launch files for the SENEKA project at Fraunhofer IPA.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
  <maintainer email="frm@ipa.fraunhofer.de">Florian Mirus</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/seneka_bringup</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>  


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>seneka_config</build_depend>
  <build_depend>seneka_environments</build_depend>
  <build_depend>sensor_placement</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>seneka_config</run_depend>
  <run_depend>seneka_environments</run_depend>
  <run_depend>sensor_placement</run_depend>
  <run_depend>rviz</run_depend>

</package>
