<?xml version="1.0"?>

<package>

  <name>seneka_control_interface</name>
  <version>0.0.0</version>
  <license>LGPL</license>

  <url>https://github.com/ipa320/seneka_sensor_node</url>

  <description>
  The seneka_socketcan package is part of the seneka_sensor_node metapackage, developed for the SeNeKa project at Fraunhofer IPA.
  This package might work with other hardware and can be used for other purposes, however the development has been specifically for this project and the deployed sensors.
  </description>

  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>

  <author email="Thorsten.Andreas.Kannacher@ipa.fraunhofer.de">Thorsten Kannacher</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>seneka_socketcan</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>seneka_socketcan</run_depend>

</package>
