<?xml version="1.0"?>
<package>
  <name>seneka_dgps</name>
  <version>0.0.0</version>
  <description>The seneka_dgps package publishes the latitude,longtitude and altitude of the DGPS.</description>

  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>

  <license>LGPL</license>


  <author email="Ciby.Mathew@ipa.fraunhofer.de">Ciby Mathew</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>     
  <run_depend>diagnostic_msgs</run_depend>

</package>
