<?xml version="1.0"?>

<package>

  <name>seneka_hokuyo_laserscanner</name>
  <version>0.0.0</version>
  <license>LGPL</license>

  <description>
  ...
  </description>

  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
  <author email="Thorsten.Andreas.Kannacher@ipa.fraunhofer.de">Thorsten Andreas Kannacher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>laser_assembler</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>laser_assembler</run_depend>

</package>
