<?xml version="1.0"?>

<package>

  <name>seneka_laser_scan</name>
  <version>0.0.0</version>
  <license>LGPL</license>

  <description>
  The seneka_laser_scan package triggers a Hokuyo laser scanner to take a 3D scan of its environement.
  </description>

  <maintainer email="Matthias.Gruhler@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
  <author email="Thorsten.Andreas.Kannacher@ipa.fraunhofer.de">Thorsten Andreas Kannacher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>laser_assembler</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>laser_assembler</run_depend>

</package>
