<?xml version="1.0"?>
<package>
  <name>seneka_node_bringup</name>
  <version>0.0.0</version>
  <description>The seneka_node_bringup package holds launch files for the senor nodes of the SENEKA project at Fraunhofer IPA.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
  <maintainer email="frm@ipa.fraunhofer.de">Florian Mirus</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPL</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>  


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>seneka_node_config</run_depend>
  <run_depend>seneka_sony_camera</run_depend>
  <run_depend>seneka_video_manager</run_depend>
  <run_depend>seneka_termo_video_manager</run_depend>
  <run_depend>seneka_laser_scan</run_depend>
  <run_depend>seneka_dgps</run_depend>
  <run_depend>seneka_socketcan</run_depend>
  <run_depend>seneka_control_interface</run_depend>
  <run_depend>seneka_leg_control</run_depend>
  <run_depend>seneka_trunk_control</run_depend>
  <run_depend>seneka_tilt_control</run_depend>
  <run_depend>urg_c</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>tinkerforge_imu_brick</run_depend>

</package>
